<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_15sdp"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_3sdp">

        <RadioButton
            android:id="@+id/rbKiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:fontFamily="@font/lato_medium"
            android:padding="@dimen/_3sdp"
            android:text="@string/kiv"
            android:textAllCaps="true" />

        <RadioButton
            android:id="@+id/rbAssignEnginner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:buttonTint="@color/colorPrimary"
            android:fontFamily="@font/lato_medium"
            android:padding="@dimen/_3sdp"
            android:text="@string/assign_engineer"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RadioGroup"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.webclues.IPPSEngineer.view.MaterialAutoCompleteTextView
                android:id="@+id/edtEngineerList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusableInTouchMode="false"
                android:hint="@string/assign_maintenance"
                android:inputType="none"
                android:textColor="@color/fontColorBlack"
                android:textSize="@dimen/text_small"
                app:met_errorColor="@color/red"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextColor="@color/fontColorBlack50"
                app:met_textColorHint="@color/fontColorBlack50"
                app:met_typeface="@string/font_medium" />


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_dropdown_form"
                android:visibility="visible" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/lato_medium"
            android:text="@string/set_priority"
            android:textColor="@color/lightGrey"
            android:textSize="@dimen/text_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/extraLightGrey"
                android:fontFamily="@font/lato_medium"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/low"
                android:textColor="@color/lightGrey"
                android:textSize="@dimen/text_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/extraLightGrey"
                android:fontFamily="@font/lato_medium"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/medium"
                android:textColor="@color/lightGrey"
                android:textSize="@dimen/text_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/extraLightGrey"
                android:fontFamily="@font/lato_medium"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/high"
                android:textColor="@color/lightGrey"
                android:textSize="@dimen/text_medium" />

        </LinearLayout>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_below="@id/llView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/lato_bold"
        android:padding="@dimen/_20sdp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium" />

</RelativeLayout>