<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/job_status"
        android:textColor="@color/fontColorBlack"
        android:textSize="@dimen/_20sdp" />


    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_3sdp">

        <RadioButton
            android:id="@+id/rbCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:fontFamily="@font/lato_medium"
            android:padding="@dimen/_3sdp"
            android:text="@string/completed"
            android:textAllCaps="false"
            android:textColor="@color/grey" />

        <RadioButton
            android:layout_marginStart="@dimen/_20sdp"
            android:id="@+id/rbEnableToComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:fontFamily="@font/lato_medium"
            android:padding="@dimen/_3sdp"
            android:text="@string/enable_complete"
            android:textAllCaps="false"
            android:textColor="@color/grey" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtAddComment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/decline_background"
        android:fontFamily="@font/lato_medium"
        android:gravity="start"
        android:hint="@string/add_comment"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/fontColorBlack"
        android:textSize="@dimen/text_small" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/lato_bold"
        android:padding="@dimen/_20sdp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium" />

    </LinearLayout>
</RelativeLayout>